@@ -1,14 +1,10 @@
 package Exobrain::Measurement::Geo;
-
-use 5.010;
-use autodie;
-use Moose;
+use Moose::Role;
 use Method::Signatures;
-
 use Exobrain::Measurement::Geo::POI;
 use Exobrain::Types qw(POI);
 
-# ABSTRACT: Geo measurement packet
+# ABSTRACT: Geo measurement packet for Exobrain
 # VERSION
 
 # Declare that we will have a summary attribute. This is to make
@@ -25,26 +21,8 @@ A standard form of measuring a geolocation, which may be
 from Foursquare, brightkite, twitter, facebook, or anything
 else that lets us snoop on poeple.
 
-Eg:
-
-    $exobrain->measure('Geo',
-        source => 'Foursquare',
-        user    => 'pjf',
-        user_name => 'Paul Fenwick',
-        is_me   => 1,
-        poi     => {
-            id   => 'abc01234ff',
-            name => 'Some place',
-            lat  => $latitude,  # optional
-            long => $longitude, # optional
-        },
-        message => 'Drinking a coffee',
-        lat  => $latitude,  # optional
-        long => $longitude, # optional
-    );
-
-In the future C<user> and C<user_name> may be combined into
-a user object.
+This is a I<role>, and must be consumed by a class that implments
+it. For one example, see L<Exobrain::Measurement::Geo::Foursquare>
 
 =cut
 
@@ -74,7 +52,9 @@ method _build_summary() {
 
 no warnings qw(redefine);
 
-method BUILD(...) {
+sub BUILD { };
+
+after BUILD => method (...) {
 
     # Fill our POI source if required
 
@@ -82,6 +62,8 @@ method BUILD(...) {
         $self->poi->source($self->source);
     }
 
-}
+};
 
 1;
+
+=for Pod::Coverage summary
