@@ -1,0 +1,7 @@
+package Exobrain::Measurement::Geo::Test;
+use Moose;
+with 'Exobrain::Measurement::Geo';
+
+# Empty class for testing role.
+
+1;
